compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__binop_todo_right.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "pub fn negate(x) {\n    x && todo\n}"
---
----- SOURCE CODE
pub fn negate(x) {
    x && todo
}

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function negate(x) {
  return x && (() => {
    throw makeError(
      "todo",
      FILEPATH,
      "my/mod",
      2,
      "negate",
      "`todo` expression evaluated. This code has not yet been implemented.",
      {}
    )
  })();
}
