compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__negation_block.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "pub fn negate(x) {\n  !{\n    123\n    x\n  }\n}"
---
export function negate(x) {
  return !(() => {
    123;
    return x;
  })();
}
