compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__operators.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "\npub fn go() {\n    True && True\n    False || False\n}\n"
---
----- SOURCE CODE

pub fn go() {
    True && True
    False || False
}


----- COMPILED JAVASCRIPT
export function go() {
  true && true;
  return false || false;
}
