compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__shadowed_bools_and_nil_typescript.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "\npub type True { True False Nil }\npub fn go(x, y) {\n  let assert True = x\n  let assert False = x\n  let assert Nil = y\n}\n"
---
----- SOURCE CODE

pub type True { True False Nil }
pub fn go(x, y) {
  let assert True = x
  let assert False = x
  let assert Nil = y
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export class True extends _.CustomType {}
export function True$True(): True$;
export function True$isTrue(value: any): value is True$;

export class False extends _.CustomType {}
export function True$False(): True$;
export function True$isFalse(value: any): value is True$;

export class Nil extends _.CustomType {}
export function True$Nil(): True$;
export function True$isNil(value: any): value is True$;

export type True$ = True | False | Nil;

export function go(x: True$, y: True$): True$;
